tests/snapshots/examples_fixtures/primop__higher_order_fastcall.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/higher_order_fastcall.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/primop/higher_order_fastcall.flx:8:18
  |
8 |     let mapped = map(xs, fn(x) { x * 2 });
  |                  ^^^

Hint:
  Define it first: let map = ...;

Help:
  Did you mean `mapped`?


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/primop/higher_order_fastcall.flx:9:20
  |
9 |     let filtered = filter(mapped, fn(x) { x > 5 });
  |                    ^^^^^^

Hint:
  Define it first: let filter = ...;

Help:
  Did you mean `filtered`?


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/primop/higher_order_fastcall.flx:10:17
   |
10 |     let total = fold(filtered, 0, fn(acc, x) { acc + x });
   |                 ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `flat_map`.

  examples/primop/higher_order_fastcall.flx:16:20
   |
16 |     let expanded = flat_map(xs, fn(x) { list(x, x + 10) });
   |                    ^^^^^^^^

Hint:
  Define it first: let flat_map = ...;


error[E004]: Undefined Variable

I can't find a value named `any`.

  examples/primop/higher_order_fastcall.flx:19:11
   |
19 |     print(any(xs, fn(x) { x == 4 }));
   |           ^^^

Hint:
  Define it first: let any = ...;


error[E004]: Undefined Variable

I can't find a value named `all`.

  examples/primop/higher_order_fastcall.flx:20:11
   |
20 |     print(all(xs, fn(x) { x > 0 }));
   |           ^^^

Hint:
  Define it first: let all = ...;


error[E004]: Undefined Variable

I can't find a value named `find`.

  examples/primop/higher_order_fastcall.flx:21:11
   |
21 |     print(find(xs, fn(x) { x == 3 }));
   |           ^^^^

Hint:
  Define it first: let find = ...;


error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/primop/higher_order_fastcall.flx:22:11
   |
22 |     print(count(xs, fn(x) { x % 2 == 0 }));
   |           ^^^^^

Hint:
  Define it first: let count = ...;

Found 8 errors.
== stdout ==
<not executed>
